{
    "name": "PlayerInputActions",
    "maps": [
        {
            "name": "Player",
            "id": "bb6ca9f2-a078-4b0e-acad-139b5d55f32a",
            "actions": [
                {
                    "name": "WeaponAttack",
                    "type": "Button",
                    "id": "db639f69-54fe-445a-aab2-ccfbb3b8469d",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "WeaponChange",
                    "type": "Button",
                    "id": "6a6f2f4c-ac9f-42c8-b51d-43b4840487f8",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "CloseApplication",
                    "type": "Button",
                    "id": "f529a8be-cdfe-4cfe-b7dc-401f769f3957",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "22c91cf7-54dc-4415-84ac-d7d3b93b4401",
                    "path": "<Mouse>/leftButton",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "WeaponAttack",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "fd9d5006-f787-4e42-a98b-152a2458639d",
                    "path": "<Mouse>/rightButton",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "WeaponChange",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "fe7581aa-0c39-49c9-b79a-43defc4242ca",
                    "path": "<Keyboard>/escape",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "CloseApplication",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": []
}